Seperate DOMVisualViewport from Blink's VisualViewport class

DOMVisualViewport represents the things exposed via the VisualViewportAPI. This
is what's returned from window.visualViewport. It queries the Blink's
VisualViewport for the main frame and returns sane values for iframes.

BUG=604928

Review-Url: https://codereview.chromium.org/2070563002
Cr-Commit-Position: refs/heads/master@{#401616}

Former-commit-id: 81dd83a5bae93da969e909c58ed3ecb50d50100c